--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sample Resume</title>
+    <title>Document</title>
     <link rel="stylesheet" href="main.css" />
   </head>
-  <body></body>
+  <body>
+    <header>Header</header>
+    <main>
+      <aside>Aside</aside>
+      <div class="rightSide">
+        <nav>Nav</nav>
+        <article>Article</article>
+      </div>
+    </main>
+    <footer>Footer</footer>
+  </body>
 </html>
