--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Holy Grail Flexbox 3</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
@@ -13,7 +13,9 @@
       <aside>Aside</aside>
       <div class="rightSide">
         <nav>Nav</nav>
-        <article>Article</article>
+        <article>
+          <h1>For training purposes only</h1>
+        </article>
       </div>
     </main>
     <footer>Footer</footer>
