--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav>Nav</nav>
         <article>
           <h1>For training purposes only</h1>
+          <a href="index2.html">Holy Grail One Level Of Flex Items</a>
         </article>
       </div>
     </main>
