--- a/index2.html
+++ b/index2.html
@@ -7,5 +7,13 @@
     <title>Holy Grail With Flex Items</title>
     <link rel="stylesheet" href="main.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header>Header</header>
+      <main>Main</main>
+      <div class="leftSidebar">Left Sidebar</div>
+      <div class="rightSidebar">Right Sidebar</div>
+      <footer>Footer</footer>
+    </div>
+  </body>
 </html>
