--- a/index2.html
+++ b/index2.html
@@ -8,12 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <header>Header</header>
-      <main>Main</main>
-      <div class="leftSidebar">Left Sidebar</div>
-      <div class="rightSidebar">Right Sidebar</div>
-      <footer>Footer</footer>
+    <div class="parent">
+      <div class="child1"></div>
+      <div class="child2"></div>
+      <div class="child3"></div>
     </div>
   </body>
 </html>
