--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <h4>Hello World</h4>
+    <h4>Hello there link</h4>
+
+    <a href="https://www.google.com/" target="_blank">
+      <img src="/images/favicon.png" alt="mylogo" width="100px" />
+    </a>
+    <h2>Form</h2>
+    <form action="#"></form>
   </body>
 </html>
